--- a/src/assets/stylesheet/helpers/_helpers-index.scss
+++ b/src/assets/stylesheet/helpers/_helpers-index.scss
@@ -9,13 +9,12 @@
 @import "../../../../node_modules/bootstrap/scss/type";
 @import "../../../../node_modules/bootstrap/scss/utilities";
 
-
 @import "../../../../node_modules/bootstrap/scss/root";
 @import "../../../../node_modules/bootstrap/scss/reboot";
 @import "../../../../node_modules/bootstrap/scss/containers";
 
-
+@import "../../../../node_modules/bootstrap/scss/forms";
 @import "../../../../node_modules/bootstrap/scss/buttons";
-
+@import "../../../../node_modules/bootstrap/scss/dropdown";
 
 @import "../../../../node_modules/bootstrap/scss/utilities/api";
