--- a/src/assets/stylesheet/helpers/_custom-variables.scss
+++ b/src/assets/stylesheet/helpers/_custom-variables.scss
@@ -25,6 +25,7 @@ $primary: #0357a8;
 $secondary: #11e4ea;
 $info: #95b9da;
 $light: #eff7ff;
+$light-blue: #ecfbff;
 $warning: #f69c5d;
 $danger: #e30613;
 $success: #36b600;
@@ -45,6 +46,7 @@ $theme-colors: (
   gray-200: $gray-200,
   gray-300: $gray-300,
   info: $info,
+  light-blue: $light-blue,
 );
 
 /* ===============================
@@ -67,3 +69,29 @@ $base-font-family: "Cairo", sans-serif;
 $link-decoration: none !default;
 $link-hover-decoration: underline !default;
 $link-hover-color: $secondary;
+
+/* ===============================
+        position-values
+   =============================== */
+
+$position-values: (
+  0: 0,
+  50: 50%,
+  100: 100%,
+);
+
+/* ===============================
+         radius
+   =============================== */
+
+$border-radius: 0.25rem;
+
+/* ===============================
+         Style Breadcrumb
+   =============================== */
+$breadcrumb-bg: $primary;
+$breadcrumb-margin-bottom: 0;
+$breadcrumb-padding-x: 1rem;
+$breadcrumb-border-radius: $border-radius;
+
+$navbar-light-color: $primary;
