--- a/src/assets/stylesheet/helpers/_helpers-index.scss
+++ b/src/assets/stylesheet/helpers/_helpers-index.scss
@@ -16,5 +16,10 @@
 @import "../../../../node_modules/bootstrap/scss/forms";
 @import "../../../../node_modules/bootstrap/scss/buttons";
 @import "../../../../node_modules/bootstrap/scss/dropdown";
+@import "../../../../node_modules/bootstrap/scss/navbar";
+@import "../../../../node_modules/bootstrap/scss/nav";
+@import "../../../../node_modules/bootstrap/scss/breadcrumb";
 
 @import "../../../../node_modules/bootstrap/scss/utilities/api";
+
+@import "./rtl";
