add project filter

--- a/src/assets/stylesheet/App.scss
+++ b/src/assets/stylesheet/App.scss
@@ -2,7 +2,8 @@
 
 @import "./base/base-index";
 
-@import "./theme/theme";
+@import "./components/_components-index";
 
+@import "./theme/theme";
 
 // @import "node_modules/bootstrap-vue/src/index.scss";
