--- a/src/assets/stylesheet/helpers/_helpers-index.scss
+++ b/src/assets/stylesheet/helpers/_helpers-index.scss
@@ -8,6 +8,7 @@
 @import "../../../../node_modules/bootstrap/scss/grid";
 @import "../../../../node_modules/bootstrap/scss/type";
 @import "../../../../node_modules/bootstrap/scss/utilities";
+@import "./custom-utilities";
 
 @import "../../../../node_modules/bootstrap/scss/root";
 @import "../../../../node_modules/bootstrap/scss/reboot";
@@ -19,6 +20,10 @@
 @import "../../../../node_modules/bootstrap/scss/navbar";
 @import "../../../../node_modules/bootstrap/scss/nav";
 @import "../../../../node_modules/bootstrap/scss/breadcrumb";
+@import "../../../../node_modules/bootstrap/scss/tables";
+@import "../../../../node_modules/bootstrap/scss/accordion";
+@import "../../../../node_modules/bootstrap/scss/transitions";
+@import "../../../../node_modules/bootstrap/scss/popover";
 
 @import "../../../../node_modules/bootstrap/scss/utilities/api";
 
