--- a/src/assets/stylesheet/helpers/_custom-variables.scss
+++ b/src/assets/stylesheet/helpers/_custom-variables.scss
@@ -5,7 +5,8 @@ $gray-100: #fafafa !default;
 $gray-200: #eee !default;
 $gray-300: #cfcfcf !default;
 $gray-400: #bbbfc2 !default;
-$gray-500: #515151 !default;
+$gray-500: #8c8b8b !default;
+$gray-600: #515151 !default;
 $gray-900: #333;
 $black: #000;
 $white: #fff;
@@ -16,7 +17,8 @@ $white: #fff;
 $grays: (
   "100": $gray-100,
   "400": $gray-400,
-  "500": $gray-100,
+  "500": $gray-500,
+  "600": $gray-600,
   "900": $gray-900,
 );
 
@@ -42,13 +44,14 @@ $theme-colors: (
   warning: $warning,
   danger: $danger,
   success: $success,
-  gray: $gray-500,
+  gray: $gray-600,
   white: $white,
   dark: $black,
   light: $light,
   gray-200: $gray-200,
   gray-300: $gray-300,
   gray-400: $gray-400,
+  gray-500: $gray-500,
   info: $info,
   light-blue: $light-blue,
   dark-blue: $dark-blue,
