--- a/src/assets/stylesheet/helpers/_rtl.scss
+++ b/src/assets/stylesheet/helpers/_rtl.scss
@@ -9,7 +9,7 @@ $left: left;
   li,
   ol,
   ul {
-    direction: $direction;;
+    direction: $direction;
   }
 
   .float-start {
@@ -19,7 +19,6 @@ $left: left;
   .float-end {
     float: $right;
   }
-
 
   @if $enable-grid-classes {
     @include make-grid-columns();
@@ -102,9 +101,24 @@ $left: left;
         left: auto;
         right: 0;
         text-align: right;
+
         .dropdown-item {
           text-align: right;
         }
+      }
+
+      .form-check .form-check-input,
+      .custom-checkbox .form-check-input,
+      .custom-checkbox .custom-control-input,
+      .custom-radio .form-check-input,
+      .custom-radio .custom-control-input {
+        float: right;
+        margin-right: -1.5em;
+        margin-left: 0;
+      }
+
+      .form-select {
+        background-position: left 0.75rem center;
       }
     }
   }
