--- a/src/components/Shared/Form/MultiSelectStyle.scss
+++ b/src/components/Shared/Form/MultiSelectStyle.scss
@@ -11,6 +11,28 @@
       display: none;
     }
   }
+  &__tag {
+    background: $info;
+    padding: 0.5rem 2rem 0.5rem 0.5rem;
+    border-radius: 3rem;
+
+    #ar & {
+      padding: 0.5rem 0.5rem 0.5rem 2rem;
+    }
+
+    &-icon {
+      background-color: $primary;
+      line-height: 1.4;
+      height: 22px;
+      right: auto;
+      top: 3px;
+      border-radius: 50%;
+      &::after {
+        color: $white;
+        font-size: 1rem;
+      }
+    }
+  }
 }
 
 .multiselect__clear {
